# model/dto/order_dto/update_order_request.go
@@ -1,7 +1,6 @@
 package order_dto
 
-type CreateOrderRequest struct {
-	SellerId  int64 `json:"sellerId"`
+type UpdateOrderRequest struct {
 	ProductId int64 `json:"productId"`
 	Quantity  int   `json:"quantity"`
 }
